crates/plotnik-tests/tests/02-parser/recovery_validation/missing_with_anchor.txt
Q = (MISSING .)
------------------ DIAGNOSTICS -------------------
error: `(MISSING)` takes at most a node kind or a quoted token
 --> query.ptk:1:14
  |
1 | Q = (MISSING .)
  |              ^
  |
help: remove the children
  |
1 - Q = (MISSING .)
1 + Q = (MISSING )
  |
help: a missing node is a zero-width token inserted by error recovery; write `(MISSING)`, `(MISSING kind)`, or `(MISSING ";")`
